log/combined-all.metagpu5.3422533.err
  File "main.py", line 250
    exp_dir = f"./{exp_name}"
                            ^
SyntaxError: invalid syntax
